--- a/app/charts/radiantone/values.yaml
+++ b/app/charts/radiantone/values.yaml
@@ -67,7 +67,7 @@ ingress:
       alb.ingress.kubernetes.io/healthcheck-port: traffic-port
       # alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
       # alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
-      # alb.ingress.kubernetes.io/success-codes: '200'
+      alb.ingress.kubernetes.io/success-codes: '200,302'
       # alb.ingress.kubernetes.io/healthy-threshold-count: '3'
       # alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
       alb.ingress.kubernetes.io/enable-sticky-session: 'false'
@@ -103,7 +103,7 @@ ingress:
       alb.ingress.kubernetes.io/healthcheck-port: traffic-port
       # alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
       # alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
-      # alb.ingress.kubernetes.io/success-codes: '200'
+      alb.ingress.kubernetes.io/success-codes: '200,302'
       # alb.ingress.kubernetes.io/healthy-threshold-count: '3'
       # alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
       # alb.ingress.kubernetes.io/enable-sticky-session: 'false'
